
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct atmel_i2s_dev {int regmap; int dev; } ;
typedef int irqreturn_t ;


 int ATMEL_I2SC_IMR ;
 unsigned int ATMEL_I2SC_INT_RXOR ;
 unsigned int ATMEL_I2SC_INT_TXUR ;
 unsigned int ATMEL_I2SC_MAX_TDM_CHANNELS ;
 int ATMEL_I2SC_SCR ;
 int ATMEL_I2SC_SR ;
 unsigned int ATMEL_I2SC_SR_RXOR ;
 unsigned int ATMEL_I2SC_SR_RXORCH (unsigned int) ;
 unsigned int ATMEL_I2SC_SR_TXUR ;
 unsigned int ATMEL_I2SC_SR_TXURCH (unsigned int) ;
 int IRQ_HANDLED ;
 int IRQ_NONE ;
 int dev_err (int ,char*,unsigned int) ;
 int regmap_read (int ,int ,unsigned int*) ;
 int regmap_write (int ,int ,unsigned int) ;

__attribute__((used)) static irqreturn_t atmel_i2s_interrupt(int irq, void *dev_id)
{
 struct atmel_i2s_dev *dev = dev_id;
 unsigned int sr, imr, pending, ch, mask;
 irqreturn_t ret = IRQ_NONE;

 regmap_read(dev->regmap, ATMEL_I2SC_SR, &sr);
 regmap_read(dev->regmap, ATMEL_I2SC_IMR, &imr);
 pending = sr & imr;

 if (!pending)
  return IRQ_NONE;

 if (pending & ATMEL_I2SC_INT_RXOR) {
  mask = ATMEL_I2SC_SR_RXOR;

  for (ch = 0; ch < ATMEL_I2SC_MAX_TDM_CHANNELS; ++ch) {
   if (sr & ATMEL_I2SC_SR_RXORCH(ch)) {
    mask |= ATMEL_I2SC_SR_RXORCH(ch);
    dev_err(dev->dev,
     "RX overrun on channel %d\n", ch);
   }
  }
  regmap_write(dev->regmap, ATMEL_I2SC_SCR, mask);
  ret = IRQ_HANDLED;
 }

 if (pending & ATMEL_I2SC_INT_TXUR) {
  mask = ATMEL_I2SC_SR_TXUR;

  for (ch = 0; ch < ATMEL_I2SC_MAX_TDM_CHANNELS; ++ch) {
   if (sr & ATMEL_I2SC_SR_TXURCH(ch)) {
    mask |= ATMEL_I2SC_SR_TXURCH(ch);
    dev_err(dev->dev,
     "TX underrun on channel %d\n", ch);
   }
  }
  regmap_write(dev->regmap, ATMEL_I2SC_SCR, mask);
  ret = IRQ_HANDLED;
 }

 return ret;
}
